packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__default_collapsed_initial_state.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
" │⠋    standalone:test                                                                                    ...       <1ms"
">│⠋ ▶  batch1 (2)                                                                                                       "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
