packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__expand_collapse_collapsed.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Batch Display Test...                                                                    Cache   Duration"
" │                                                                                                                      "
">│⠋    standalone:test                                                                                    ...       <1ms"
" │⠋ ▶  batch1 (2)                                                                                                       "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
