packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__expand_collapse_re_expanded.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                        Cache   Duration"
" │                                                                                                                      "
">│⠋    standalone:test                                                                                    ...       <1ms"
" │⠋ ▼  batch1 (2)                                                                                                       "
" │⠋      app:build                                                                                        ...       <1ms"
" │⠋      lib:build                                                                                        ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
