packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__filter_hides_placeholders_but_shows_matching_in_progress.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 4250
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  Filter: task1                                                                                                         "
"  -> 3 tasks filtered out. Press / to persist, <esc> to clear                                                           "
