packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__filtered_active_tasks_with_parallel_section.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 4321
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  Filter: task                                                                                                          "
"  -> 3 tasks filtered out. Press / to persist, <esc> to clear                                                           "
